derive/tests/fail/02-unsafe-covariance.stderr
error: At most one lifetime parameter is allowed!
 --> tests/fail/02-unsafe-covariance.rs:7:14
  |
7 | struct S<'a, 'b, T> {
  |              ^^
